--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,14 +1,21 @@
 @charset 'UTF-8';
 
 @import 
-'abstracts/vars';
+  'abstracts/vars';
 
 @import
-'~reset-css/sass/reset',
-'~font-awesome/scss/font-awesome';
+  '~reset-css/sass/reset',
+  '~font-awesome/scss/font-awesome',
+  '~bootstrap/scss/bootstrap';
 
 @import
-'../node_modules/bootstrap/scss/bootstrap';
+  'components/button';
 
 @import
   'base/typo';
+
+  @import
+  'layout/slideshow',
+  'layout/main',
+  'layout/footer',
+  'layout/aside';
