:construction:working on HTML & SCSS

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,4 +1,10 @@
 .footer {
-    padding: 1em;
-    background-color: #F5F5F5;
+  padding: $main-padding;
+  background-color: #F5F5F5;
+    &-logo {
+        img {
+
+            height:5em;
+        }
+    }
 }
