--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,9 @@
   '~bootstrap/scss/bootstrap';
 
 @import
-  'components/button';
+  'components/insurance',
+  'components/button',
+  'components/network';
 
 @import
   'base/typo';
