:construction:editing the HTML/SCSS

--- a/src/scss/abstracts/_vars.scss
+++ b/src/scss/abstracts/_vars.scss
@@ -3,6 +3,8 @@
 // et non celle définie dans le code source de FA
 $fa-font-path: '/../node_modules/font-awesome/fonts';
 
+// COLORS
+$alt-color: #7F7F7F;
 
 // FONTS
 $main-font: 'Roboto', sans-serif;
