--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,7 +11,8 @@
 @import
   'components/insurance',
   'components/button',
-  'components/network';
+  'components/network',
+  'components/accordion';
 
 @import
   'base/typo';
