--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -7,4 +7,14 @@
             height:5em;
         }
     }
+    .contact {
+        &-head {
+            font-weight: bold;
+            font-size: x-large;
+        }
+
+        &-text {
+            color: $alt-color;
+        }
+    }
 }
