--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,4 +1,18 @@
-button {
-    background-color: black;
-    text-transform: uppercase;
+.button-addcart {
+    .btn {
+        background-color: black;
+        text-transform: uppercase;
+        color:white;
+        border: black solid 2px;
+        background: linear-gradient(to left, black 50%, white 50%) right;
+        background-size: 200%;
+        transition: .5s ease-out;
+       
+        &:hover {
+            background-color: white;
+            color:black;
+            background-position: left;
+            
+        }
+    }
 }
