:hammer:add js script for sliders & :construction:update HTML

--- a/src/scss/abstracts/_vars.scss
+++ b/src/scss/abstracts/_vars.scss
@@ -4,7 +4,8 @@
 $fa-font-path: '/../node_modules/font-awesome/fonts';
 
 // COLORS
-$alt-color: #7F7F7F;
+$alt-color: #D6D6D6;
+$dark-grey: #8C8C8C;
 
 // FONTS
 $main-font: 'Roboto', sans-serif;
