--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,7 @@
   '~bootstrap/scss/bootstrap';
 
 @import
-  'components/slick',
+  'components/slider',
   'components/insurance',
   'components/button',
   'components/network',
