:lipstick:working on style &:construction:begin desktop/responsive

--- a/src/scss/abstracts/_vars.scss
+++ b/src/scss/abstracts/_vars.scss
@@ -4,8 +4,10 @@
 $fa-font-path: '/../node_modules/font-awesome/fonts';
 
 // COLORS
+$main-background: #F5F5F5;
 $alt-color: #D6D6D6;
 $dark-grey: #8C8C8C;
+$grey-text: #A0A0A0;
 
 // FONTS
 $main-font: 'Roboto', sans-serif;
