--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   padding: $main-padding;
-  background-color: #F5F5F5;
+  background-color: $main-background;
     &-logo {
         img {
 
