--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,14 +1,18 @@
 .main {
     padding: $main-padding;
     
+    .infos-ref {
+        color: $grey-text;
+    }
+
     .collection-text {
-        color: $alt-color;
+        color: $grey-text;
     }
 
     .insurance-list {
         font-size: 95%;
     }
-
+    
     .collection-link {
         color: black;
         text-transform: uppercase;
