--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 
 @import
   'components/slider',
+  'components/breadcrumb',
   'components/insurance',
   'components/button',
   'components/network',
