--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 .info-block {
     background-color: $main-background;
-    padding: 0.7em;
+    padding: .7em;
     p {
         color: $grey-text;
         font-size: small;
