--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
   'base/typo';
 
 @import
+  'components/modal',
   'components/slider',
   'components/breadcrumb',
   'components/insurance',
@@ -20,6 +21,7 @@
   'components/accordion';
 
 @import
+  'layout/nav',
   'layout/body',
   'layout/header',
   'layout/main',
