added js function for interactivity

--- a/src/scss/abstracts/_vars.scss
+++ b/src/scss/abstracts/_vars.scss
@@ -4,14 +4,14 @@
 $fa-font-path: '/../node_modules/font-awesome/fonts';
 
 // COLORS
+$black: #000000;
 $main-background: #F5F5F5;
-$alt-color: #D6D6D6;
-$dark-grey: #8C8C8C;
-$grey-text: #A0A0A0;
+$grey-text: #666666;
 
 // FONTS
 $main-font: 'Roboto', sans-serif;
 $main-font-condensed: 'Roboto Condensed', sans-serif;
+$aside-title: Helvetica, sans-serif;
 $font-fallback: Arial, Helvetica, sans-serif;
 
 // LAYOUT
