--- a/src/scss/components/_breadcrumb.scss
+++ b/src/scss/components/_breadcrumb.scss
@@ -2,12 +2,14 @@
     background-color: white;
     font-size: small;
     &-item {
+       
         a {
             color: $grey-text;
-            text-decoration: none;
-            .active {
-                color: black;
-            }
+            text-decoration: none;  
+        }
+        
+        .active {
+            color: $black;
         }
     }
 }
