--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -1,5 +1,3 @@
-/* Slider */
-
 .slick-slider {
     position: relative;
     display: block;
@@ -64,7 +62,6 @@
     }
 }
 .slick-slide {
-    margin: auto;
     display: flex;
     float: left;
     height: 223px;
@@ -109,10 +106,12 @@
 .slick-dots {
     display: flex !important;
     justify-content: flex-end;
+    
     li {
         margin-top: 0.5em;
+       
         button {
-            background-color: $alt-color;
+            background-color: $main-background;
             text-indent: -9999px;
             border: none;
             margin: 0.1em;
@@ -120,16 +119,19 @@
             height: 0.3em;
         }
     }
+    
     .slick-active {
+       
         button {
-            background-color: black;
+            background-color: $black;
         }
     }   
 }
 
-// aside sliders arrows
+
 .aside-slider {
     position: relative;
+    
     .slick-slide{
 
         img {
@@ -138,6 +140,7 @@
             max-width:300px;
         }
     }
+    
     .slick-prev {
         position: absolute;
         width: 30px;
