--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import
   'components/modal',
   'components/slider',
+  'components/mosaic',
   'components/breadcrumb',
   'components/insurance',
   'components/button',
