add interactivity on choice lists

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,16 +1,17 @@
 .button-addcart {
+    
     .btn {
-        background-color: black;
+        background-color: $black;
         text-transform: uppercase;
         color:white;
-        border: black solid 2px;
-        background: linear-gradient(to left, black 50%, white 50%) right;
+        border: $black solid 2px;
+        background: linear-gradient(to left, $black 50%, white 50%) right;
         background-size: 200%;
         transition: .5s ease-out;
        
         &:hover {
             background-color: white;
-            color:black;
+            color:$black;
             background-position: left;
             
         }
