--- a/src/scss/abstracts/_vars.scss
+++ b/src/scss/abstracts/_vars.scss
@@ -7,6 +7,7 @@ $fa-font-path: '/../node_modules/font-awesome/fonts';
 $black: #000000;
 $main-background: #F5F5F5;
 $grey-text: #666666;
+$light-grey-text: #999999;
 
 // FONTS
 $main-font: 'Roboto', sans-serif;
