--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -20,7 +20,7 @@
         }
 
         span {
-            background-color: black !important;
+            background-color: $black !important;
         }
     }
 
@@ -41,11 +41,11 @@
             
             a {
                 text-decoration: none;
-                color: black;
+                color: $black;
                 font-family: $main-font;
                 font-size: small;
 
-                &::hover {
+                &:hover {
                     text-decoration: underline;
                 }
             }
