:lipstick:update styles

--- a/src/scss/abstracts/_vars.scss
+++ b/src/scss/abstracts/_vars.scss
@@ -8,6 +8,7 @@ $black: #000000;
 $main-background: #F5F5F5;
 $grey-text: #666666;
 $light-grey-text: #999999;
+$aside-grey: #F6F6F6;
 
 // FONTS
 $main-font: 'Roboto', sans-serif;
