--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -17,6 +17,7 @@
         color: $black;
         text-transform: uppercase;
         font-weight: bold;
+        
         img {
             margin-right: 1em;
         }
@@ -36,7 +37,7 @@
             }
             
             &-reduc {
-                padding: .5em .5em;
+                padding: .2em .5em;
                 background-color: $black !important;
             }
             
@@ -47,6 +48,7 @@
         }
 
         .infos-size {
+            
             p {
                 color: $black;
             }
@@ -56,6 +58,7 @@
 
                 &-item {
                     padding: .6em 1em;
+                    cursor: pointer;
                 }
             }
 
@@ -63,6 +66,7 @@
                 color: $light-grey-text;
                 font-size: smaller;
                 font-weight: bolder;
+                cursor: pointer;
             }
 
             .active {
