--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -6,7 +6,7 @@
         text-transform: uppercase;
         position: relative;
         
-        //add arrow
+        //Add arrow
         &::after {
             content: "\f107";
             color: $black;
@@ -18,6 +18,7 @@
         }
     }
     
+    //Switch arrow when expanded or not
     .btn[aria-expanded="true"]::after {
         content: "\f106";
     }
