--- a/src/scss/layout/_aside.scss
+++ b/src/scss/layout/_aside.scss
@@ -1,5 +1,6 @@
 .aside-like {
     padding: $main-padding;
+    //Grey reclangles behind sliders config
     @media (min-width: 992px){
         background: linear-gradient(to right, white 70%, $aside-grey 30%);
     }
@@ -14,6 +15,7 @@
 
 .aside-last {
     padding: $main-padding;
+    //Grey reclangles behind sliders config
     @media (min-width: 992px) {
         background: linear-gradient(to left, white 70%, $aside-grey 30%);
     }
